Changed layout of shadow station.

--- a/AnlageZwei/AnlageZwei.conf
+++ b/AnlageZwei/AnlageZwei.conf
@@ -90,9 +90,9 @@ GleisN6a="22,11,qqqXX"
 GleisN6b="27,9,qXXXVVL"
 GleisN7a="22,12,qqqXX"
 GleisN7b="27,9,qqqXXXXXVVVL"
-GleisO2a="1,5,hXXXXXXXX"
-GleisO3a="1,1,hXXXXXXXX"
-GleisS1="14,5,XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
+GleisO2a="1,5,hXXXXXXXXXXXXX"
+GleisO3a="1,1,hXXXXXX"
+GleisS1="9,5,qXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
 GleisS1a="2,6,qXXXXXXXXXXX"
 GleisS1b_a="10,5,qqqXXXXX"
 GleisS1b_b="13,5,XXXX"
@@ -102,34 +102,34 @@ GleisS1f="2,5,qXXXXXXXXXXXXXXX"
 GleisS1g="2,4,qXXXXXXXXXXXXX"
 GleisS1h_a="4,3,XXXXXXXXR"
 GleisS1h_b="2,3,qXXX"
-GleisS2="12,4,qqqXXXXXXXXXXXXXXXXXXXX"
+GleisS2="11,4,hXXXXXXXXXXXXXXXXXXXXX"
 GleisS2a="15,7,qXX"
 GleisS2b="10,7,XXXX"
 GleisS2d="0,7,qqqXXXXXXXXXXX"
-GleisS3="12,3,qqqXXXXXXXXXXXXXXXXXXXX"
+GleisS3="11,3,hXXXXXXXXXXXXXXXXXXXXX"
 GleisS3a="15,8,qXX"
 GleisS3c="0,8,qqqXXXXXXXXXXX"
-GleisS4="12,2,qqqXXXXXXXXXXXXXXXXXXXX"
+GleisS4="11,2,hXXXXXXXXXXXXXXXXXXXXX"
 GleisS4a="15,9,qXX"
 GleisS4b="4,9,hXX"
 GleisS4c="1,9,qqqXXXXXXX"
-GleisS5="12,1,qqqXXXXXXXXXXXXXXXXXXXX"
+GleisS5="11,1,hXXXXXXXXXXXXXXXXXXXXX"
 GleisS5a="17,10,qXX"
 GleisS6a="17,11,qXX"
 GleisS6b="9,10,hXXXXXXVR"
 GleisS7a="17,12,qXX"
-GleisSO1a="5,5,hXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
-GleisSO2a="11,4,XXX"
-GleisSO2c="5,1,h"
-GleisSO3a="10,3,hXXXXX"
-GleisSO4a="10,2,XXXXXXX"
-GleisSO5a="9,1,hXXXXXXXXX"
-GleisSW1a="27,5,XXXXXX"
-GleisSW2a="18,4,qqqXXX"
-GleisSW2c="27,1,XXXXXXXXXX"
-GleisSW3a="18,3,qqqXXXXX"
-GleisSW4a="18,2,qqqXXXXXXX"
-GleisSW5a="18,1,qqqXXXXXXXXX"
+GleisSO1a="5,5,qqqXX"
+GleisSO2a="10,4,qX"
+GleisSO2c="4,1,XX"
+GleisSO3a="9,3,qqqXXX"
+GleisSO4a="9,2,qXXXXX"
+GleisSO5a="8,1,qqqXXXXXXX"
+GleisSW1a="22,5,qXXXXXXXXXXXXXXXXX"
+GleisSW2a="17,4,qqqXX"
+GleisSW2c="25,1,XXXXXXXXXX"
+GleisSW3a="17,3,qqqXXXX"
+GleisSW4a="17,2,qqqXXXXXX"
+GleisSW5a="17,1,qqqXXXXXXXX"
 GleisW1a="31,2,qqqXXXXXX"
 GleisW1b="28,2,qXXXXXX"
 GleisW2a="18,3,hXXXX"
@@ -138,19 +138,19 @@ GleisW2c="1,3,hXXXXXXXXXXXXXXXXXXXX"
 GleisW3a="18,2,hXXXX"
 GleisW3b="12,2,hXXXX"
 GleisW3c="1,2,hXXXXXXXXXXXXXXXXXXXX"
-Schattenbahnhof201="4,5,h"
-Schattenbahnhof203="29,5,h"
-Schattenbahnhof204="25,5,XXXX"
-Schattenbahnhof304="25,1,XXXX"
-SchattenbahnhofG="4,1,h"
-SchattenbahnhofN2="7,4,qqqXXXXXXXXXR"
-SchattenbahnhofN3="8,3,qXXXXX"
-SchattenbahnhofN4="7,2,qqqXXXXX"
-SchattenbahnhofN5="7,1,hXXXX"
-SchattenbahnhofP2="20,4,hXXXXXXXXXL"
-SchattenbahnhofP3="21,3,XXXXX"
-SchattenbahnhofP4="21,2,hXXXXX"
-SchattenbahnhofP5="22,1,XXXX"
+Schattenbahnhof201="7,5,qXXXX"
+Schattenbahnhof203="27,5,h"
+Schattenbahnhof204="20,5,qXXXX"
+Schattenbahnhof304="23,1,XXXX"
+SchattenbahnhofG="5,1,h"
+SchattenbahnhofN2="7,4,qqqXXXXXXR"
+SchattenbahnhofN3="8,3,qXX"
+SchattenbahnhofN4="7,2,qqqXX"
+SchattenbahnhofN5="7,1,hX"
+SchattenbahnhofP2="19,4,qXXXXXXL"
+SchattenbahnhofP3="19,3,qqqXX"
+SchattenbahnhofP4="20,2,qXX"
+SchattenbahnhofP5="20,1,qqqX"
 Schattenbahnhofv203="6,5"
 Schattenbahnhofv303="6,4"
 Weiche10="25,8,L"
@@ -176,9 +176,9 @@ WeicheB3="19,1,R"
 WeicheB4="10,3,R"
 WeicheB5="3,3,L"
 WeicheB6="3,2,L"
-WeicheS1="24,1,L"
-WeicheS2="23,2,qqqiR"
-WeicheS3="23,3,qiR"
+WeicheS1="22,1,L"
+WeicheS2="21,2,qqqiR"
+WeicheS3="21,3,qiR"
 WeicheS4="7,3,qiL"
 WeicheS5="6,2,qqqiL"
 WeicheS6="6,1,hR"
