Changed signal meaning of signal A into N3.

--- a/AnlageZwei/AnlageZwei.conf
+++ b/AnlageZwei/AnlageZwei.conf
@@ -39,7 +39,7 @@ AltUlmv401="16,9"
 AltUlmv601="12,11"
 Berg1I="4,2"
 Berg2I="8,3,XXXX"
-BergA="15,3,q"
+BergN3="15,3,q"
 BergB="27,2,qXXX"
 BergP1="8,2"
 BergP3="22,3,qXX"
