--- a/AnlageZwei/Mork2/Signale.properties
+++ b/AnlageZwei/Mork2/Signale.properties
@@ -1,70 +1,71 @@
 #Mork2/Signale.properties
-#Wed Feb 06 11:46:12 CET 2013
-BahnhofAltUlm6II=15,11
-BahnhofAltUlm1III=11,6
-StreckeBergB=31,2
-BahnhofAltUlm1I=7,6
-StreckeBergA=18,3
-BahnhofAltUlm4I=7,9
-StreckeWestv304=18,2
-BahnhofAltUlmP7=19,12
-StreckeWestv302=27,2
-BahnhofAltUlmP6=19,11
-BahnhofAltUlmP5=19,10
-BahnhofAltUlmP4=16,9
-BahnhofAltUlmP3=16,8
-BahnhofAltUlmP2=16,7
-BahnhofSchattenbahnhofG=6,4
-StreckeWestv204=18,3
-BahnhofAltUlmG=38,7
-BahnhofAltUlmF=38,6
-StreckeWestv202=27,3
-BahnhofAltUlmC=4,8
-BahnhofAltUlmB=4,7
-BahnhofSchattenbahnhofN5=15,1
-BahnhofAltUlmn3=4,8
-StreckeBerg2I=10,3
-StreckeBergp3=16,3
-BahnhofSchattenbahnhofN4=15,2
-BahnhofAltUlmn2=4,7
-BahnhofSchattenbahnhofN3=15,3
-BahnhofAltUlm3I=34,8
-BahnhofSchattenbahnhofN2=15,4
-BahnhofAltUlm1IV=13,6
-StreckeBergG1i=-1,-1
-BahnhofAltUlm6I=13,11
-BahnhofAltUlm2II=32,7
-BahnhofSchattenbahnhof304=29,4
-BahnhofAltUlm1II=11,5
-BahnhofSchattenbahnhofv303=6,4
-BahnhofSchattenbahnhof204=29,5
-BahnhofSchattenbahnhof203=31,5
-BahnhofSchattenbahnhof201=6,5
-BahnhofSchattenbahnhofv203=6,5
-StreckeBerg1I=5,2
-StreckeBergb=35,2
-StreckeBerga=31,2
-BahnhofSchattenbahnhofP5=23,1
-BahnhofAltUlmp3=38,8
-BahnhofAltUlm2I=10,7
-BahnhofSchattenbahnhofP4=23,2
-BahnhofAltUlmp2=38,7
-BahnhofSchattenbahnhofP3=23,3
-BahnhofAltUlmp1=38,6
-BahnhofSchattenbahnhofP2=23,4
-StreckeWest302=18,2
-BahnhofAltUlmN7=27,12
+#Mon Jun 16 14:42:31 CEST 2025
 BahnhofAltUlmN6=27,11
 BahnhofAltUlmN5=27,10
 BahnhofAltUlmN4=25,9
 BahnhofAltUlmN3=25,8
-StreckeBergP3=25,3
 BahnhofAltUlmN2=25,7
+BahnhofSchattenbahnhof304=29,4
 BahnhofAltUlmN1=27,6
-StreckeBergP1=10,2
-StreckeWestH=22,2
-StreckeWest202=18,3
 BahnhofAltUlmv201=16,7
-BahnhofAltUlmv301=16,8
 BahnhofAltUlmv401=16,9
+BahnhofAltUlmG=38,7
 BahnhofAltUlmv601=12,10
+StreckeWest302=18,2
+BahnhofSchattenbahnhofP3=23,3
+BahnhofSchattenbahnhofP2=23,4
+BahnhofSchattenbahnhofP5=23,1
+BahnhofSchattenbahnhofP4=23,2
+BahnhofAltUlm1I=7,6
+BahnhofAltUlm6II=15,11
+BahnhofAltUlm2II=32,7
+StreckeBergP1=10,2
+StreckeBergP3=25,3
+BahnhofAltUlmN7=27,12
+BahnhofAltUlmp3=38,8
+BahnhofAltUlmp2=38,7
+BahnhofAltUlmp1=38,6
+BahnhofSchattenbahnhofG=6,4
+BahnhofSchattenbahnhofv303=6,4
+StreckeWestv202=27,3
+BahnhofAltUlm2I=10,7
+BahnhofAltUlm6I=13,11
+StreckeWestv204=18,3
+StreckeBerg1I=5,2
+BahnhofAltUlmP7=19,12
+BahnhofAltUlmP6=19,11
+BahnhofAltUlmP5=19,10
+BahnhofAltUlmP4=16,9
+BahnhofSchattenbahnhof204=29,5
+BahnhofAltUlmv301=16,8
+BahnhofAltUlmP3=16,8
+BahnhofAltUlmP2=16,7
+BahnhofSchattenbahnhofN5=15,1
+BahnhofAltUlm1IV=13,6
+StreckeBerga=31,2
+BahnhofSchattenbahnhofN4=15,2
+BahnhofSchattenbahnhof201=6,5
+StreckeBergb=35,2
+StreckeWest202=18,3
+BahnhofSchattenbahnhof203=31,5
+BahnhofSchattenbahnhofN3=15,3
+BahnhofSchattenbahnhofN2=15,4
+BahnhofAltUlm3I=34,8
+BahnhofAltUlm1II=11,5
+StreckeBergN3=18,3
+StreckeWestH=22,2
+StreckeBerg2I=10,3
+BahnhofAltUlmn3=4,8
+BahnhofAltUlmn2=4,7
+StreckeBergA=-1,-1
+StreckeBergB=31,2
+StreckeWestv302=27,2
+BahnhofAltUlm4I=7,9
+BahnhofAltUlmB=4,7
+BahnhofSchattenbahnhofv203=6,5
+BahnhofAltUlmC=4,8
+BahnhofAltUlmF=38,6
+BahnhofAltUlm1III=11,6
+StreckeBergp3=16,3
+StreckeWestv304=18,2
+StreckeBergG1i=-1,-1
